# globalnepali

./: README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  init.sh
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.in  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  api.py
backend/app/api/v1/endpoints/: articles.py  auth.py  events.py  sponsors.py  users.py  volunteers.py
backend/app/core/: config.py  database.py  security.py
backend/app/schemas/: base.py  user.py
backend/scripts/: seed_data.py
backend/tests/: conftest.py  test_auth.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/api/: authMiddleware.ts  config.ts  youtube.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/AdminLayout/: index.tsx
frontend/src/components/Layout/: index.tsx
frontend/src/components/videos/: FeaturedVideos.tsx  VideoCard.tsx  VideoCarousel.tsx
frontend/src/pages/Home/: index.tsx
frontend/src/pages/admin/: Articles.tsx  Dashboard.tsx  Events.tsx  Sponsors.tsx  Users.tsx  Volunteers.tsx
frontend/src/pages/articles/: Articles.tsx  NewArticle.tsx
frontend/src/pages/auth/: Login.tsx  Register.tsx
frontend/src/pages/events/: Events.tsx  NewEvent.tsx
frontend/src/routes/: index.tsx
frontend/src/services/: youtube.ts
frontend/src/store/: store.ts
frontend/src/theme/: index.ts
frontend/src/utils/: api.ts  retry.ts
(+5 files in other folders)
