[project]
name = "globalnepali-backend"
version = "0.1.0"
description = "Backend API for Global Nepali"
authors = [
    { name = "Ashish Bhusal" }
]
requires-python = ">=3.9"
dependencies = [
    "uvicorn>=0.34.3",
]

[tool.ruff]
# Enable pycodestyle (`E`), Pyflakes (`F`), and import sorting (`I`)
select = ["E", "F", "I", "B", "C4", "ARG", "SIM", "ERA", "PL", "RUF"]
ignore = []

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.format]
# Use single quotes for strings.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] 
